<resources>
    <string name="app_name">Principal</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="titulo">Agregar personas</string>
    <string name="agregar">Agregar</string>
    <string name="limpiar">Limpiar</string>
    <string name="No">No.</string>
    <string name="opcion_1">Agregar</string>
    <string name="opcion_2">Listar</string>
    <string-array name="opciones_lista">
        <item>@string/opcion_1</item>
        <item>@string/opcion_2</item>
    </string-array>
</resources>
